# API_meteo_France

./: .gitignore  .pre-commit-config.yaml  CSVDownloader.py  README.md  create_meteo_data_histo.py  create_station_meteo_data_histo.py  logging_config.py  main.py  manage_meteo_data.py  pyproject.toml  utils.py
data/: description_variables_meteo.csv
geolocalisation/: Station.py  create_station_geolocalisation_file.py  main.py  utils_geolocalisation.py
logs/: logging_config.py
visualisation/: app_callbacks.py  app_layout.py  main_app.py  weather_data.py
