[tool.poetry]
name = "missmaiteo"
version = "0.1.0"
description = ""
authors = ["Ingridfgy <ingridfgy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
